deploy/traefik-routes/templates/nginx-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: nginx
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`nginx.krupcov.ru`)
    kind: Rule
    services:
    - name: nginx
      namespace: nginx
      port: 3001
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx-strip-prefix
  namespace: nginx
spec:
  stripPrefix:
    prefixes:
    - /nginx
